// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChartWrapper component renders the component with loading false 1`] = `
<EuiErrorBoundary>
  <div
    intl={
      Object {
        "defaultFormats": Object {},
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatDateToParts": [Function],
        "formatDisplayName": [Function],
        "formatHTMLMessage": [Function],
        "formatList": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatNumberToParts": [Function],
        "formatPlural": [Function],
        "formatRelativeTime": [Function],
        "formatTime": [Function],
        "formatTimeToParts": [Function],
        "formats": Object {},
        "formatters": Object {
          "getDateTimeFormat": [Function],
          "getDisplayNames": [Function],
          "getListFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralRules": [Function],
          "getRelativeTimeFormat": [Function],
        },
        "locale": "en",
        "messages": Object {},
        "onError": [Function],
        "textComponent": Symbol(react.fragment),
        "timeZone": undefined,
      }
    }
    style={
      Object {
        "height": "100%",
        "opacity": 1,
        "transition": "opacity 0.2s",
      }
    }
  >
    <SnapshotHeading
      total={12}
    />
    <EuiSpacer
      size="xs"
    />
    <DonutChart
      down={8}
      height={144}
      up={4}
    />
  </div>
</EuiErrorBoundary>
`;

exports[`ChartWrapper component renders the component with loading true 1`] = `
<EuiErrorBoundary>
  <div
    intl={
      Object {
        "defaultFormats": Object {},
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatDateToParts": [Function],
        "formatDisplayName": [Function],
        "formatHTMLMessage": [Function],
        "formatList": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatNumberToParts": [Function],
        "formatPlural": [Function],
        "formatRelativeTime": [Function],
        "formatTime": [Function],
        "formatTimeToParts": [Function],
        "formats": Object {},
        "formatters": Object {
          "getDateTimeFormat": [Function],
          "getDisplayNames": [Function],
          "getListFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralRules": [Function],
          "getRelativeTimeFormat": [Function],
        },
        "locale": "en",
        "messages": Object {},
        "onError": [Function],
        "textComponent": Symbol(react.fragment),
        "timeZone": undefined,
      }
    }
    style={
      Object {
        "height": "100%",
        "opacity": 0.3,
        "transition": "opacity 0.2s",
      }
    }
  >
    <SnapshotHeading
      total={12}
    />
    <EuiSpacer
      size="xs"
    />
    <DonutChart
      down={8}
      height={144}
      up={4}
    />
  </div>
  <EuiFlexGroup
    alignItems="center"
    justifyContent="spaceAround"
    style={
      Object {
        "height": "100%",
        "marginBottom": 0,
        "marginTop": "-100%",
      }
    }
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiLoadingChart
        size="xl"
      />
    </EuiFlexItem>
  </EuiFlexGroup>
</EuiErrorBoundary>
`;
